<resources>
    <string name="app_name">My Application</string>
    <string name="app_name_public">OMDB client</string>
    <string name="search_button">Search</string>
    <string name="search_hint">Search by movie title</string>
    <string name="no_results">No results</string>
    <string name="title_is_empty">Title is empty</string>
    <string name="network_not_aviable">Network not aviable</string>
    <string name="movie_is_added">Movie is added</string>
    <string name="already_added">Movie is already added</string>
    <string name="favourite_movies">Favourite movies</string>
    <string name="favourite_deleted">Favourite is deleted</string>
    <string name="empty">Empty</string>
</resources>
