<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/search_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="textCapSentences" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search_button" />


    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="28dp" />

    <TextView
        android:id="@+id/list_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
         />

</LinearLayout>

